--- a/Tubumu.PatchMapper/Tubumu.PatchMapper.csproj
+++ b/Tubumu.PatchMapper/Tubumu.PatchMapper.csproj
@@ -9,5 +9,6 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
   </ItemGroup>
 </Project>
